# rbdc-mcp

./: .gitignore  Cargo.toml  README.md  README_cn.md  build.rs  readme.md  readme_cn.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: db_manager.rs  handler.rs  main.rs  read_only.rs  sql_guard.rs
