[package]
name = "rbdc-mcp"
version = "0.1.13"
edition = "2021"
description = "MCP (Model Context Protocol) Server for RBDC - Execute SQL queries and modifications"
authors = ["rbdc team"]
license = "Apache-2.0"
repository = "https://github.com/rbatis/rbdc-mcp"
homepage = "https://github.com/rbatis/rbdc-mcp"
categories = ["database", "web-programming"]
keywords = ["database", "mcp", "sql", "server", "rbdc"]

[[bin]]
name = "rbdc-mcp"
path = "src/main.rs"


[features]
default = ["full"]
sqlite = ["dep:rbdc-sqlite"]
mysql = ["dep:rbdc-mysql"]
postgres = ["dep:rbdc-pg"]
mssql = ["dep:rbdc-mssql"]
duckdb = ["dep:rbdc-duckdb"]
turso = ["dep:rbdc-turso"]
full = [
    "sqlite",
    "mysql",
    "postgres",
    "mssql",
    "duckdb",
    "turso",
]

[dependencies]

rmcp = { version = "1.6.0",features = ["server", "transport-io"]}

anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
rbs = { version = "4" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }

# RBDC dependencies (optional — each behind a feature flag)
rbdc-pool-fast = { version = "4.9.0" }
rbdc = { version = "4.9.0" }
rbdc-sqlite = { version = "4.9.0", optional = true }
rbdc-mysql = { version = "4.9.0", optional = true }
rbdc-pg = { version = "4.9.0", optional = true }
rbdc-mssql = { version = "4.9.0", optional = true }
rbdc-duckdb = { version = "4.9.0", optional = true }
rbdc-turso = { version = "4.9.0", optional = true }





